fix some css not working and update all theme

--- a/country-home4-de/manifest.cfg
+++ b/country-home4-de/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Homes4 de theme 07-18-2014 v1.1 c
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = country home4 de theme 09-10-2014 v1.1
 
