--- a/country-home4-fr/manifest.cfg
+++ b/country-home4-fr/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Mondeimmo.fr 07-05-2014 v1.1
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = country home4 fr theme 09-10-2014 v1.1 
 
