--- a/home4-br/manifest.cfg
+++ b/home4-br/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Homes4 br theme 07-18-2014 v1.1
-description = 
+title = Homes4 po theme 09-10-2014 v1.1
 doctype = <!DOCTYPE html>
+description = 
 
