--- a/home4-fr/manifest.cfg
+++ b/home4-fr/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Mondeimmo.fr 07-18-2014 v1.1
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = Homes4 fr theme 09-10-2014 v1.1
 
