--- a/home4-ru/manifest.cfg
+++ b/home4-ru/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Moizagrandom.ru 07-18-2014 v.1.1
 description = 
 doctype = <!DOCTYPE html>
+title = Homes4 ru theme 09-10-2014 v1.1
 
