--- a/country-home4-br/manifest.cfg
+++ b/country-home4-br/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Homes4 br theme 07-05-2014 v1.1
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = country home4 br theme 09-10-2014 v1.1 
 
