--- a/country-home4-ru/manifest.cfg
+++ b/country-home4-ru/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Moizagrandom.ru 07-05-2014 v.1.1
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = country home4 ru theme 09-10-2014 v1.1 
 
