--- a/home4-me.uk/manifest.cfg
+++ b/home4-me.uk/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Homes4 en theme 09-10-2014 v1.1
-description = 
 doctype = <!DOCTYPE html>
+description = 
+title = Homes4 uk theme 09-15-2014 v1.1
 
